--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django==5.1.5
 djangorestframework==3.15.2
 PyYAML==6.0.2
 requests==2.32.3
-django-cors-header==4.6.0
+django-cors-headers==4.6.0
+psycopg2-binary==2.9.10
 
 # Formatter
 pre_commit==4.0.1
